chore: simplify promotion